Format Style Documents

--- a/styles/Archive.module.scss
+++ b/styles/Archive.module.scss
@@ -1,22 +1,20 @@
-.archiveSection{
-    width: 414px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    background-color: #F8F9FA;
-    border-radius: 16px;
-    padding: 32px;
-    min-height: 150px;    
-  
+.archiveSection {
+  width: 414px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: #f8f9fa;
+  border-radius: 16px;
+  padding: 32px;
+  min-height: 150px;
 
-    &_Header{
-      padding-left: 16px;
-      border-left-width: 8px;
-      --tw-border-opacity: 1;
-      border-color: rgb(115 137 255 / var(--tw-border-opacity));
-      @apply flex flex-row justify-between 
+  &_Header {
+    padding-left: 16px;
+    border-left-width: 8px;
+    --tw-border-opacity: 1;
+    border-color: rgb(115 137 255 / var(--tw-border-opacity));
+    @apply flex flex-row justify-between;
   }
 
-
-  &_name{
+  &_name {
     font-style: normal;
     font-weight: 800;
     font-size: 24px;
@@ -24,8 +22,8 @@
     color: #313131;
   }
 
-  &_name_ex{
-    font-family: 'Roboto';
+  &_name_ex {
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
     font-size: 13px;
@@ -35,8 +33,4 @@
     letter-spacing: 0.08em;
     color: #757575;
   }
-
 }
-
-
-
