--- a/styles/Todo.module.scss
+++ b/styles/Todo.module.scss
@@ -1,29 +1,27 @@
+.todoSection {
+  width: 414px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: #f8f9fa;
+  border-radius: 16px;
+  padding: 32px;
+  min-height: 150px;
 
-
-.todoSection{
-    width: 414px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    background-color: #F8F9FA;
-    border-radius: 16px;
-    padding: 32px;
-    min-height: 150px;      
-
-    &_Header{
-      padding-left: 16px;
-      border-left-width: 8px;
-      --tw-border-opacity: 1;
-      border-color: rgb(246 101 104 / var(--tw-border-opacity));
-      @apply flex flex-row justify-between 
+  &_Header {
+    padding-left: 16px;
+    border-left-width: 8px;
+    --tw-border-opacity: 1;
+    border-color: rgb(246 101 104 / var(--tw-border-opacity));
+    @apply flex flex-row justify-between;
   }
 
-  &_AddButton{
-    background: #3DA623;
+  &_AddButton {
+    background: #3da623;
     width: 41px;
-  height: 41px;
-    @apply rounded-full 
+    height: 41px;
+    @apply rounded-full;
   }
 
-  &_name{
+  &_name {
     font-style: normal;
     font-weight: 800;
     font-size: 24px;
@@ -31,8 +29,8 @@
     color: #313131;
   }
 
-  &_name_ex{
-    font-family: 'Roboto';
+  &_name_ex {
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
     font-size: 13px;
@@ -42,8 +40,4 @@
     letter-spacing: 0.08em;
     color: #757575;
   }
-
 }
-
-
-
