--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,22 @@ body {
   padding-bottom: 50px;
   /* zoom: 90%; */
 }
+
+.MuiDialog-container .MuiPaper-root {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 37px;
+  padding: 10px 38px ;
+  background: #F8F9FA;
+}
+.MuiDialogTitle-root{
+  font-family: 'Open Sans';
+  font-style: normal;
+font-weight: 100;
+font-size: 24px;
+line-height: 33px;
+display: flex;
+align-items: center;
+letter-spacing: 0.08em;
+
+color: #000000;
+}
