--- a/styles/Task.module.scss
+++ b/styles/Task.module.scss
@@ -1,13 +1,13 @@
-.todo {
+.task {
   margin-top: 24px;
   background: #ffffff;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04),
     0px 0px 1px rgba(0, 0, 0, 0.04);
   border-radius: 16px;
   padding: 16px 0px 16px 24px;
-  @apply flex flex-row justify-between;
+  @apply flex flex-row justify-between transition duration-500 transform hover:scale-105 ;
 
-  &_Content {
+  &_title {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
@@ -22,5 +22,6 @@
     /* Neutral/100 */
 
     color: #000000;
+    @apply hover:underline cursor-pointer
   }
 }
