--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@ body {
   border-radius: 37px;
   padding: 10px 38px ;
   background: #F8F9FA;
-  @apply w-8/12;
+  @apply w-11/12 md:w-8/12 ;
 }
 .MuiDialogTitle-root{
   font-family: 'Open Sans';
